academy_index_page: swap img for same size ones, sizing and aligning them fixes #268

--- a/apps/core/static/scss/_academy-list.scss
+++ b/apps/core/static/scss/_academy-list.scss
@@ -21,7 +21,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
 
     &:hover {
@@ -59,7 +59,8 @@
 }
 
 .academy-list__topic-img {
-
+    height: 110px;
+    width: auto;
 }
 
 //desktop size
